--- a/src/features/SubtitleGrid/SubtitleGrid.module.css
+++ b/src/features/SubtitleGrid/SubtitleGrid.module.css
@@ -1,6 +1,7 @@
-.grid_container {
+.gridContainer {
     width: 100%;
-    height: 2vh;
+    min-height: 20vh;
+    overflow: auto;
     background-color: white;
     border-collapse: collapse;
     border: 2px solid;
